- Fixed error while sending messages to "My students" from professor account
- Fixed path error when creating new user
- Fixed user type assignments when registering automatically to courses/lessons through a default group
- Fixed memory overconsumption during calculation of users' traffic statistics
- Fixed memory_get_peak_usage() call for php 5.1.x when debug_mode is on

=== Version 3.6.3 build 7455 ===
- Fixed error in course completion page
- Fixed lesson assignment to users issue

=== Version 3.6.3 build 7417 ===
- Added course instances functionality (educational/enterprise)
- Added feedback functionality
- Added curriculum functionality (educational/enterprise)
- Added enterprise options to system settings (educational/enterprise)
- Added find user functionality and paired them closely to groups (educational/enterprise)
- Added quick upgrade functionality
- Added purge logs functionality in admin -> maintenance
- Added option in custom user types for dashboard
- Added option about where to redirect after user login (user dashboard or user courses)
- Added debugging mode option
- Added option to show only courses in progress in user's courses list
- Added "completed lesson" block
- Added "reset course progress" functionality
- Radical performance and memory consumption improvements
- Unassigning and reassigning a user to a course/lesson now retains his/her progress
- By default only courses/lessons in progress show up in users' catalog
- Made RSS module installed by default and connect to eFront's RSS
- Updated adodb libraries to 5.10
- Updated phplivedocx_server value to https://api.livedocx.com/1.2/mailmerge.asmx?WSDL
- Updated layout to better support IE6/7 (eliminates annoying white empty space)
- Fixed security vulnerabilities discovered by VUPEN Security http://www.vupen.com. The issue regarded XSS attacks via POST and was addressed by adding an optional parameter to sanitize POST parameters in admin's system settings 