@@ -9,6 +9,8 @@
 - Fixed user type assignments when registering automatically to courses/lessons through a default group
 - Fixed memory overconsumption during calculation of users' traffic statistics
 - Fixed memory_get_peak_usage() call for php 5.1.x when debug_mode is on
+- Fixed deactivated lessons showing up in catalog
+- Fixed certain branches not showing up on branches select lists
 
 === Version 3.6.3 build 7455 ===
 - Fixed error in course completion page
